test/libyul/yulSyntaxTests/invalid/pc_disallowed.yul
{
    pop(pc())
}
// ====
// dialect: zvmTyped
// ----
// SyntaxError 2450: (10-12): PC instruction is a low-level ZVM feature. Because of that PC is disallowed in strict assembly.
